feat: option to view all pastes

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
         code {
           display: block;
         }
+        a {
+            color: #98c379;
+        }
         {% block styles %}{% endblock styles %}
     </style>
     {% block head %}{% endblock head %}
