--- a/templates/pastes.html
+++ b/templates/pastes.html
@@ -15,17 +15,30 @@
         position: absolute;
         right: 2rem;
         top: 1rem;
-
     }
+
+    button[title^="Delete"] {
+        margin-right: 0.3rem;
+    }
+
+    button[title^="Delete"]:focus-visible {
+        outline: 2px solid currentColor;
+        outline-offset: 2px;
+    }
+
+    li {
+        form > a {
+            margin-right: 1.5rem;
+        }
+    }
+   
 {% endblock styles %}
 
 
 {% block content %}
 {{ content|safe }}
-
-
 <script>
-    const forms = document.querySelectorAll('form');
+  const forms = document.querySelectorAll('form');
 
     for (const form of forms) {
         form.addEventListener("submit", (event) => {
@@ -41,3 +54,8 @@
 {% endblock content %}
 
 
+{% block navigation %}
+<div class="navigation">
+  <a href="/" class="new-paste">New</a>
+</div>
+{% endblock navigation %}
