--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <style>
       @font-face {
         font-family: 'Yoga';
-        src: url('/static/fonts/yoga.woff2') format('woff2');
+        src: url('/fonts/yoga.woff2') format('woff2');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
